--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.locale_fr_lang: 'fr'
+    app.locale_en_lang: 'en'
+    app.website_name: 'Newspreneuriat'
 
 services:
     # default configuration for services in *this* file
