--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "core-js": "^3.23.0",
+        "file-loader": "^6.0.0",
         "postcss": "^8.4.23",
         "postcss-loader": "^7.2.4",
         "regenerator-runtime": "^0.13.9",
